working on fixing layout issues with refactor

--- a/app/assets/stylesheets/resources/navigation.css.scss
+++ b/app/assets/stylesheets/resources/navigation.css.scss
@@ -135,6 +135,11 @@ body {padding-top: 50px}
     float: right;
   }
 }
+@media only screen and (min-width: 650px) {
+  .header_title_width{
+    width: 75%;
+  }
+}
 
 
 
